--- a/gedata/templates/gedata/inventory.html
+++ b/gedata/templates/gedata/inventory.html
@@ -22,65 +22,68 @@
             <th rowspan="4">wellid</th>
             <th rowspan="2">wellid</th>
             <th>hcp</th>
-            <td id="hcpww00s" class="data_cell">{{ hcpww00s |safe }}</td>
-            <td id="hcpww16s" class="data_cell">{{ hcpww16s |safe }}</td>
-            <td id="hcpww32s" class="data_cell">{{ hcpww32s |safe }}</td>
-            <td id="hcpww64s" class="data_cell">{{ hcpww64s |safe }}</td>
+            <td id="hcpww00s" class="data_cell osdc_complete">{{ hcpww00s |safe }}</td>
+            <td id="hcpww16s" class="data_cell osdc_neglected">{{ hcpww16s |safe }}</td>
+            <td id="hcpww32s" class="data_cell osdc_neglected">{{ hcpww32s |safe }}</td>
+            <td id="hcpww64s" class="data_cell osdc_neglected">{{ hcpww64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkiww00s" class="data_cell">{{ nkiww00s |safe }}</td>
-            <td id="nkiww16s" class="data_cell">{{ nkiww16s |safe }}</td>
-            <td id="nkiww32s" class="data_cell">{{ nkiww32s |safe }}</td>
-            <td id="nkiww64s" class="data_cell">{{ nkiww64s |safe }}</td>
+            <td id="nkiww00s" class="data_cell osdc_complete">{{ nkiww00s |safe }}</td>
+            <td id="nkiww16s" class="data_cell osdc_active">{{ nkiww16s |safe }}</td>
+            <td id="nkiww32s" class="data_cell osdc_active">{{ nkiww32s |safe }}</td>
+            <td id="nkiww64s" class="data_cell osdc_active">{{ nkiww64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="2">glasser</th>
             <th>hcp</th>
-            <td id="hcpwg00s" class="data_cell">{{ hcpwg00s |safe }}</td>
-            <td id="hcpwg16s" class="data_cell">{{ hcpwg16s |safe }}</td>
-            <td id="hcpwg32s" class="data_cell">{{ hcpwg32s |safe }}</td>
-            <td id="hcpwg64s" class="data_cell">{{ hcpwg64s |safe }}</td>
+            <td id="hcpwg00s" class="data_cell osdc_neglected">{{ hcpwg00s |safe }}</td>
+            <td id="hcpwg16s" class="data_cell osdc_neglected">{{ hcpwg16s |safe }}</td>
+            <td id="hcpwg32s" class="data_cell osdc_neglected">{{ hcpwg32s |safe }}</td>
+            <td id="hcpwg64s" class="data_cell osdc_neglected">{{ hcpwg64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkiwg00s" class="data_cell">{{ nkiwg00s |safe }}</td>
-            <td id="nkiwg16s" class="data_cell">{{ nkiwg16s |safe }}</td>
-            <td id="nkiwg32s" class="data_cell">{{ nkiwg32s |safe }}</td>
-            <td id="nkiwg64s" class="data_cell">{{ nkiwg64s |safe }}</td>
+            <td id="nkiwg00s" class="data_cell osdc_complete">{{ nkiwg00s |safe }}</td>
+            <td id="nkiwg16s" class="data_cell osdc_active">{{ nkiwg16s |safe }}</td>
+            <td id="nkiwg32s" class="data_cell osdc_active">{{ nkiwg32s |safe }}</td>
+            <td id="nkiwg64s" class="data_cell osdc_active">{{ nkiwg64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="4">glasser</th>
             <th rowspan="2">wellid</th>
             <th>hcp</th>
-            <td id="hcpgw00s" class="data_cell">{{ hcpgw00s |safe }}</td>
-            <td id="hcpgw16s" class="data_cell">{{ hcpgw16s |safe }}</td>
-            <td id="hcpgw32s" class="data_cell">{{ hcpgw32s |safe }}</td>
-            <td id="hcpgw64s" class="data_cell">{{ hcpgw64s |safe }}</td>
+            <td id="hcpgw00s" class="data_cell osdc_complete">{{ hcpgw00s |safe }}</td>
+            <td id="hcpgw16s" class="data_cell osdc_complete">{{ hcpgw16s |safe }}</td>
+            <td id="hcpgw32s" class="data_cell osdc_complete">{{ hcpgw32s |safe }}</td>
+            <td id="hcpgw64s" class="data_cell osdc_complete">{{ hcpgw64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkigw00s" class="data_cell">{{ nkigw00s |safe }}</td>
-            <td id="nkigw16s" class="data_cell">{{ nkigw16s |safe }}</td>
-            <td id="nkigw32s" class="data_cell">{{ nkigw32s |safe }}</td>
-            <td id="nkigw64s" class="data_cell">{{ nkigw64s |safe }}</td>
+            <td id="nkigw00s" class="data_cell osdc_complete">{{ nkigw00s |safe }}</td>
+            <td id="nkigw16s" class="data_cell osdc_complete">{{ nkigw16s |safe }}</td>
+            <td id="nkigw32s" class="data_cell osdc_complete">{{ nkigw32s |safe }}</td>
+            <td id="nkigw64s" class="data_cell osdc_complete">{{ nkigw64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="2">glasser</th>
             <th>hcp</th>
-            <td id="hcpgg00s" class="data_cell">{{ hcpgg00s |safe }}</td>
-            <td id="hcpgg16s" class="data_cell">{{ hcpgg16s |safe }}</td>
-            <td id="hcpgg32s" class="data_cell">{{ hcpgg32s |safe }}</td>
-            <td id="hcpgg64s" class="data_cell">{{ hcpgg64s |safe }}</td>
+            <td id="hcpgg00s" class="data_cell osdc_complete">{{ hcpgg00s |safe }}</td>
+            <td id="hcpgg16s" class="data_cell osdc_complete">{{ hcpgg16s |safe }}</td>
+            <td id="hcpgg32s" class="data_cell osdc_complete">{{ hcpgg32s |safe }}</td>
+            <td id="hcpgg64s" class="data_cell osdc_complete">{{ hcpgg64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkigg00s" class="data_cell">{{ nkigg00s |safe }}</td>
-            <td id="nkigg16s" class="data_cell">{{ nkigg16s |safe }}</td>
-            <td id="nkigg32s" class="data_cell">{{ nkigg32s |safe }}</td>
-            <td id="nkigg64s" class="data_cell">{{ nkigg64s |safe }}</td>
+            <td id="nkigg00s" class="data_cell osdc_complete">{{ nkigg00s |safe }}</td>
+            <td id="nkigg16s" class="data_cell osdc_complete">{{ nkigg16s |safe }}</td>
+            <td id="nkigg32s" class="data_cell osdc_complete">{{ nkigg32s |safe }}</td>
+            <td id="nkigg64s" class="data_cell osdc_complete">{{ nkigg64s |safe }}</td>
         </tr>
     </table>
+    <p>Cells with <span class="osdc_complete">white backgrounds</span> are complete.</p>
+    <p><span class="osdc_active">Pale green</span> backgrounds indicate sets currently active on OSDC.</p>
+    <p><span class="osdc_neglected">Pale red</span> backgrounds indicate neglected sets.</p>
     <!-- The button has been replaced by just calculating it all in the django view
     <button id="inventory_table_refresh_button" class="btn footer_button" onclick="fillInventoryTable();"><i class="fas fa-sync"></i> fill table</button>
     -->
