complete ranked set of entrez_ids is included in inventory

--- a/gedata/templates/gedata/inventory.html
+++ b/gedata/templates/gedata/inventory.html
@@ -23,16 +23,16 @@
             <th rowspan="2">wellid</th>
             <th>hcp</th>
             <td id="hcpww00s" class="data_cell osdc_complete">{{ hcpww00s |safe }}</td>
-            <td id="hcpww16s" class="data_cell osdc_neglected">{{ hcpww16s |safe }}</td>
+            <td id="hcpww16s" class="data_cell osdc_active">{{ hcpww16s |safe }}</td>
             <td id="hcpww32s" class="data_cell osdc_neglected">{{ hcpww32s |safe }}</td>
             <td id="hcpww64s" class="data_cell osdc_neglected">{{ hcpww64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
             <td id="nkiww00s" class="data_cell osdc_complete">{{ nkiww00s |safe }}</td>
-            <td id="nkiww16s" class="data_cell osdc_active">{{ nkiww16s |safe }}</td>
-            <td id="nkiww32s" class="data_cell osdc_active">{{ nkiww32s |safe }}</td>
-            <td id="nkiww64s" class="data_cell osdc_active">{{ nkiww64s |safe }}</td>
+            <td id="nkiww16s" class="data_cell osdc_complete">{{ nkiww16s |safe }}</td>
+            <td id="nkiww32s" class="data_cell osdc_complete">{{ nkiww32s |safe }}</td>
+            <td id="nkiww64s" class="data_cell osdc_complete">{{ nkiww64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="2">glasser</th>
@@ -45,9 +45,9 @@
         <tr>
             <th>nki</th>
             <td id="nkiwg00s" class="data_cell osdc_complete">{{ nkiwg00s |safe }}</td>
-            <td id="nkiwg16s" class="data_cell osdc_active">{{ nkiwg16s |safe }}</td>
-            <td id="nkiwg32s" class="data_cell osdc_active">{{ nkiwg32s |safe }}</td>
-            <td id="nkiwg64s" class="data_cell osdc_active">{{ nkiwg64s |safe }}</td>
+            <td id="nkiwg16s" class="data_cell osdc_complete">{{ nkiwg16s |safe }}</td>
+            <td id="nkiwg32s" class="data_cell osdc_complete">{{ nkiwg32s |safe }}</td>
+            <td id="nkiwg64s" class="data_cell osdc_complete">{{ nkiwg64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="4">glasser</th>
