--- a/gedata/templates/gedata/inventory.html
+++ b/gedata/templates/gedata/inventory.html
@@ -23,9 +23,9 @@
             <th rowspan="2">wellid</th>
             <th>hcp</th>
             <td id="hcpww00s" class="data_cell osdc_complete">{{ hcpww00s |safe }}</td>
-            <td id="hcpww16s" class="data_cell osdc_active">{{ hcpww16s |safe }}</td>
-            <td id="hcpww32s" class="data_cell osdc_neglected">{{ hcpww32s |safe }}</td>
-            <td id="hcpww64s" class="data_cell osdc_neglected">{{ hcpww64s |safe }}</td>
+            <td id="hcpww16s" class="data_cell osdc_complete osdc_primary">{{ hcpww16s |safe }}</td>
+            <td id="hcpww32s" class="data_cell osdc_active">{{ hcpww32s |safe }}</td>
+            <td id="hcpww64s" class="data_cell osdc_active">{{ hcpww64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
