--- a/gedata/templates/gedata/resultset.html
+++ b/gedata/templates/gedata/resultset.html
@@ -22,6 +22,7 @@
                         <td><div>{{ form.comp.label_tag }}</div></td>
                         <td><div>{{ form.train_mask.label_tag }}</div></td>
                         <td><div>{{ form.algo.label_tag }}</div></td>
+                        <td><div>{{ form.norm.label_tag }}</div></td>
                         {% if metric != "performance" %}
                             <td><div>{{ form.threshold.label_tag }}</div></td>
                         {% endif %}
@@ -32,6 +33,7 @@
                         <td><div>{{ form.comp }}<br />{{ form.comp.errors }}</div></td>
                         <td><div>{{ form.train_mask }}<br />{{ form.train_mask.errors }}</div></td>
                         <td><div>{{ form.algo }}<br />{{ form.algo.errors }}</div></td>
+                        <td><div>{{ form.norm }}<br />{{ form.norm.errors }}</div></td>
                         {% if metric != "performance" %}
                             <td><div>{{ form.threshold }}<br />{{ form.threshold.errors }}</div></td>
                         {% endif %}
