--- a/gedata/templates/gedata/inventory.html
+++ b/gedata/templates/gedata/inventory.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<!-- This div will be filled with the rid of a given cell if its refresh button is clicked.
+     The calculating and spinner code can then determine which images to build. -->
+<div style="display: none;" id="active_rid">empty</div>
+
 <h2>SRS-normalized</h2>
     <table class="inventory_table">
         <!-- Table Header -->
@@ -23,10 +27,10 @@
             <th rowspan="1">wellid</th>
             <th rowspan="1">wellid</th>
             <th>hcp</th>
-            <td id="hcpww00ss" class="data_cell osdc_neglected">{{ hcpww00ss |safe }}</td>
-            <td id="hcpww16ss" class="data_cell osdc_complete osdc_primary">{{ hcpww16ss |safe }}</td>
+            <td id="hcpww00ss" class="data_cell osdc_active">{{ hcpww00ss |safe }}</td>
+            <td id="hcpww16ss" class="data_cell osdc_active osdc_primary">{{ hcpww16ss |safe }}</td>
             <td id="hcpww32ss" class="data_cell osdc_active">{{ hcpww32ss |safe }}</td>
-            <td id="hcpww64ss" class="data_cell osdc_neglected">{{ hcpww64ss |safe }}</td>
+            <td id="hcpww64ss" class="data_cell osdc_active">{{ hcpww64ss |safe }}</td>
         </tr>
     </table>
 
@@ -51,17 +55,17 @@
             <th rowspan="4">wellid</th>
             <th rowspan="2">wellid</th>
             <th>hcp</th>
-            <td id="hcpww00s" class="data_cell osdc_complete">{{ hcpww00s |safe }}</td>
-            <td id="hcpww16s" class="data_cell osdc_complete">{{ hcpww16s |safe }}</td>
-            <td id="hcpww32s" class="data_cell osdc_complete">{{ hcpww32s |safe }}</td>
-            <td id="hcpww64s" class="data_cell osdc_complete">{{ hcpww64s |safe }}</td>
+            <td id="hcpww00s" class="data_cell  osdc_neglected">{{ hcpww00s |safe }}</td>
+            <td id="hcpww16s" class="data_cell  osdc_neglected">{{ hcpww16s |safe }}</td>
+            <td id="hcpww32s" class="data_cell  osdc_neglected">{{ hcpww32s |safe }}</td>
+            <td id="hcpww64s" class="data_cell  osdc_neglected">{{ hcpww64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkiww00s" class="data_cell osdc_complete">{{ nkiww00s |safe }}</td>
-            <td id="nkiww16s" class="data_cell osdc_complete">{{ nkiww16s |safe }}</td>
-            <td id="nkiww32s" class="data_cell osdc_complete">{{ nkiww32s |safe }}</td>
-            <td id="nkiww64s" class="data_cell osdc_complete">{{ nkiww64s |safe }}</td>
+            <td id="nkiww00s" class="data_cell  osdc_neglected">{{ nkiww00s |safe }}</td>
+            <td id="nkiww16s" class="data_cell  osdc_neglected">{{ nkiww16s |safe }}</td>
+            <td id="nkiww32s" class="data_cell  osdc_neglected">{{ nkiww32s |safe }}</td>
+            <td id="nkiww64s" class="data_cell  osdc_neglected">{{ nkiww64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="2">glasser</th>
@@ -73,41 +77,41 @@
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkiwg00s" class="data_cell osdc_complete">{{ nkiwg00s |safe }}</td>
-            <td id="nkiwg16s" class="data_cell osdc_complete">{{ nkiwg16s |safe }}</td>
-            <td id="nkiwg32s" class="data_cell osdc_complete">{{ nkiwg32s |safe }}</td>
-            <td id="nkiwg64s" class="data_cell osdc_complete">{{ nkiwg64s |safe }}</td>
+            <td id="nkiwg00s" class="data_cell  osdc_neglected">{{ nkiwg00s |safe }}</td>
+            <td id="nkiwg16s" class="data_cell  osdc_neglected">{{ nkiwg16s |safe }}</td>
+            <td id="nkiwg32s" class="data_cell  osdc_neglected">{{ nkiwg32s |safe }}</td>
+            <td id="nkiwg64s" class="data_cell  osdc_neglected">{{ nkiwg64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="4">glasser</th>
             <th rowspan="2">wellid</th>
             <th>hcp</th>
-            <td id="hcpgw00s" class="data_cell osdc_complete">{{ hcpgw00s |safe }}</td>
-            <td id="hcpgw16s" class="data_cell osdc_complete">{{ hcpgw16s |safe }}</td>
-            <td id="hcpgw32s" class="data_cell osdc_complete">{{ hcpgw32s |safe }}</td>
-            <td id="hcpgw64s" class="data_cell osdc_complete">{{ hcpgw64s |safe }}</td>
+            <td id="hcpgw00s" class="data_cell  osdc_neglected">{{ hcpgw00s |safe }}</td>
+            <td id="hcpgw16s" class="data_cell  osdc_neglected">{{ hcpgw16s |safe }}</td>
+            <td id="hcpgw32s" class="data_cell  osdc_neglected">{{ hcpgw32s |safe }}</td>
+            <td id="hcpgw64s" class="data_cell  osdc_neglected">{{ hcpgw64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkigw00s" class="data_cell osdc_complete">{{ nkigw00s |safe }}</td>
-            <td id="nkigw16s" class="data_cell osdc_complete">{{ nkigw16s |safe }}</td>
-            <td id="nkigw32s" class="data_cell osdc_complete">{{ nkigw32s |safe }}</td>
-            <td id="nkigw64s" class="data_cell osdc_complete">{{ nkigw64s |safe }}</td>
+            <td id="nkigw00s" class="data_cell  osdc_neglected">{{ nkigw00s |safe }}</td>
+            <td id="nkigw16s" class="data_cell  osdc_neglected">{{ nkigw16s |safe }}</td>
+            <td id="nkigw32s" class="data_cell  osdc_neglected">{{ nkigw32s |safe }}</td>
+            <td id="nkigw64s" class="data_cell  osdc_neglected">{{ nkigw64s |safe }}</td>
         </tr>
         <tr>
             <th rowspan="2">glasser</th>
             <th>hcp</th>
-            <td id="hcpgg00s" class="data_cell osdc_complete">{{ hcpgg00s |safe }}</td>
-            <td id="hcpgg16s" class="data_cell osdc_complete">{{ hcpgg16s |safe }}</td>
-            <td id="hcpgg32s" class="data_cell osdc_complete">{{ hcpgg32s |safe }}</td>
-            <td id="hcpgg64s" class="data_cell osdc_complete">{{ hcpgg64s |safe }}</td>
+            <td id="hcpgg00s" class="data_cell  osdc_neglected">{{ hcpgg00s |safe }}</td>
+            <td id="hcpgg16s" class="data_cell  osdc_neglected">{{ hcpgg16s |safe }}</td>
+            <td id="hcpgg32s" class="data_cell  osdc_neglected">{{ hcpgg32s |safe }}</td>
+            <td id="hcpgg64s" class="data_cell  osdc_neglected">{{ hcpgg64s |safe }}</td>
         </tr>
         <tr>
             <th>nki</th>
-            <td id="nkigg00s" class="data_cell osdc_complete">{{ nkigg00s |safe }}</td>
-            <td id="nkigg16s" class="data_cell osdc_complete">{{ nkigg16s |safe }}</td>
-            <td id="nkigg32s" class="data_cell osdc_complete">{{ nkigg32s |safe }}</td>
-            <td id="nkigg64s" class="data_cell osdc_complete">{{ nkigg64s |safe }}</td>
+            <td id="nkigg00s" class="data_cell  osdc_neglected">{{ nkigg00s |safe }}</td>
+            <td id="nkigg16s" class="data_cell  osdc_neglected">{{ nkigg16s |safe }}</td>
+            <td id="nkigg32s" class="data_cell  osdc_neglected">{{ nkigg32s |safe }}</td>
+            <td id="nkigg64s" class="data_cell  osdc_neglected">{{ nkigg64s |safe }}</td>
         </tr>
     </table>
     <p>Cells with <span class="osdc_complete">white backgrounds</span> are complete.</p>
@@ -133,18 +137,18 @@
             <th rowspan="3">glasser</th>
             <th rowspan="3">glasser</th>
             <th>fear-neutral</th>
-            <td id="fn_gg00s" class="data_cell osdc_complete">{{ fn_gg00s |safe }}</td>
-            <td id="fn_gg16s" class="data_cell osdc_complete">{{ fn_gg16s |safe }}</td>
+            <td id="fn_gg00s" class="data_cell osdc_neglected">{{ fn_gg00s |safe }}</td>
+            <td id="fn_gg16s" class="data_cell osdc_neglected">{{ fn_gg16s |safe }}</td>
         </tr>
         <tr>
             <th>fear</th>
-            <td id="f__gg00s" class="data_cell osdc_complete">{{ f__gg00s |safe }}</td>
-            <td id="f__gg16s" class="data_cell osdc_complete">{{ f__gg16s |safe }}</td>
+            <td id="f__gg00s" class="data_cell osdc_neglected">{{ f__gg00s |safe }}</td>
+            <td id="f__gg16s" class="data_cell osdc_neglected">{{ f__gg16s |safe }}</td>
         </tr>
         <tr>
             <th>neutral</th>
-            <td id="n__gg00s" class="data_cell osdc_complete">{{ n__gg00s |safe }}</td>
-            <td id="n__gg16s" class="data_cell osdc_complete">{{ n__gg16s |safe }}</td>
+            <td id="n__gg00s" class="data_cell osdc_neglected">{{ n__gg00s |safe }}</td>
+            <td id="n__gg16s" class="data_cell osdc_neglected">{{ n__gg16s |safe }}</td>
         </tr>
     </table>
     <!-- The button has been replaced by just calculating it all in the django view
