fix multiple rank and mean columns into properly named

--- a/gedata/templates/gedata/inventory.html
+++ b/gedata/templates/gedata/inventory.html
@@ -35,7 +35,7 @@
         </tr>
     </table>
 
-<h3>8 split quarters (more to come)</h3>
+<h3>32 split quarters</h3>
     <table class="inventory_table">
         <!-- Table Header -->
         <tr>
