--- a/gedata/templates/gedata/inventory.html
+++ b/gedata/templates/gedata/inventory.html
@@ -8,7 +8,7 @@
 
 <h2>SRS-normalized</h2>
 
-<h3>32 split quarters</h3>
+<h3>50 split-quarters (by wellid)</h3>
     <table class="inventory_table">
         <!-- Table Header -->
         <tr>
@@ -36,7 +36,35 @@
         </tr>
     </table>
 
-<h2>Fear - Neutral connectivity split quarters</h2>
+<h3>32 split-quarters (by parcel)</h3>
+    <table class="inventory_table">
+        <!-- Table Header -->
+        <tr>
+            <th>parcel</th>
+            <th>split</th>
+            <th>comp</th>
+            <th colspan="4">mask</th>
+        </tr>
+        <tr>
+            <th colspan="3"></th>
+            <th>none</th>
+            <th>&lt; 16mm</th>
+            <th>&lt; 32mm</th>
+            <th>&lt; 64mm</th>
+        </tr>
+        <!-- Table Body -->
+        <tr>
+            <th rowspan="1">parcel</th>
+            <th rowspan="1">parcel</th>
+            <th>hcp</th>
+            <td id="hcpgg00ss4" class="data_cell osdc_active">{{ hcpgg00ss4 |safe }}</td>
+            <td id="hcpgg16ss4" class="data_cell osdc_active osdc_primary">{{ hcpgg16ss4 |safe }}</td>
+            <td id="hcpgg32ss4" class="data_cell osdc_active">{{ hcpgg32ss4 |safe }}</td>
+            <td id="hcpgg64ss4" class="data_cell osdc_active">{{ hcpgg64ss4 |safe }}</td>
+        </tr>
+    </table>
+
+<h3>Fear - Neutral connectivity split quarters</h3>
     <table class="inventory_table">
         <!-- Table Header -->
         <tr>
